# heatbeam

./: .gitignore  CMakeLists.txt
src/: heatbeam.cpp  heatbeam.hpp  main.cpp
